CONFIGURE: Set Google OAuth Client ID for CBRS authentication
OAuth Client ID: 1044782186913-kehquaq56fcubedupb34611c0hm1ctob.apps.googleusercontent.com

This enables the 'Sign in with Google' popup in CBRS Settings.
Users can now authenticate with their Google accounts for Google SAS API access.

Firebase App Hosting will automatically rebuild with this configuration.

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -185,7 +185,7 @@ env:
   # Authorized origins: https://lte-pci-mapper--lte-pci-mapper-65450042-bbf71.us-east4.hosted.app
   # Redirect URIs: https://lte-pci-mapper--lte-pci-mapper-65450042-bbf71.us-east4.hosted.app/oauth/google/callback
   - variable: PUBLIC_GOOGLE_OAUTH_CLIENT_ID
-    value: "1044782186913-REPLACEME.apps.googleusercontent.com"
+    value: "1044782186913-kehquaq56fcubedupb34611c0hm1ctob.apps.googleusercontent.com"
     availability:
       - BUILD
       - RUNTIME
