--- a/firebase-automation/deploy-hss-to-gce.yaml
+++ b/firebase-automation/deploy-hss-to-gce.yaml
@@ -62,41 +62,58 @@ steps:
           sleep 10
         done
   
-  # Step 3: Install Docker and base dependencies
+  # Step 3: Install Docker and base dependencies using startup script
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     id: 'install-dependencies'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
-        gcloud compute ssh genieacs-backend --zone=us-central1-a --command="
-          set -e
-          
-          # Update system
-          sudo apt-get update
-          sudo DEBIAN_FRONTEND=noninteractive apt-get upgrade -y
-          
-          # Install Node.js 20
-          curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
-          sudo apt-get install -y nodejs
-          
-          # Install MongoDB client tools
-          wget -qO - https://www.mongodb.org/static/pgp/server-7.0.asc | sudo apt-key add -
-          echo 'deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu jammy/mongodb-org/7.0 multiverse' | sudo tee /etc/apt/sources.list.d/mongodb-org-7.0.list
-          sudo apt-get update
-          sudo apt-get install -y mongodb-mongosh
-          
-          # Install Docker
-          sudo apt-get install -y docker.io docker-compose
-          sudo systemctl enable docker
-          sudo systemctl start docker
-          sudo usermod -aG docker \$USER
-          
-          # Install nginx
-          sudo apt-get install -y nginx
-          
-          echo '✅ Base dependencies installed'
-        "
+        # Create startup script
+        cat > /tmp/install-deps.sh << 'SCRIPT'
+        #!/bin/bash
+        set -e
+        
+        # Update system
+        apt-get update -qq
+        DEBIAN_FRONTEND=noninteractive apt-get upgrade -y -qq
+        
+        # Install Node.js 20
+        curl -fsSL https://deb.nodesource.com/setup_20.x | bash - >/dev/null 2>&1
+        apt-get install -y nodejs -qq
+        
+        # Install MongoDB client tools
+        wget -qO - https://www.mongodb.org/static/pgp/server-7.0.asc | apt-key add - 2>/dev/null
+        echo 'deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu jammy/mongodb-org/7.0 multiverse' > /etc/apt/sources.list.d/mongodb-org-7.0.list
+        apt-get update -qq
+        apt-get install -y mongodb-mongosh -qq
+        
+        # Install Docker
+        apt-get install -y docker.io docker-compose -qq
+        systemctl enable docker >/dev/null 2>&1
+        systemctl start docker
+        
+        # Install nginx
+        apt-get install -y nginx -qq
+        
+        echo 'Dependencies installed' > /tmp/deps-complete
+        SCRIPT
+        
+        # Copy and execute startup script
+        gcloud compute scp /tmp/install-deps.sh genieacs-backend:/tmp/install-deps.sh --zone=us-central1-a
+        gcloud compute instances add-metadata genieacs-backend --zone=us-central1-a --metadata-from-file startup-script=/tmp/install-deps.sh
+        
+        echo '✅ Startup script configured'
+        
+        # Wait for installation to complete
+        echo 'Waiting for dependencies to install (this may take 3-5 minutes)...'
+        for i in {1..60}; do
+          if gcloud compute instances get-serial-port-output genieacs-backend --zone=us-central1-a 2>/dev/null | grep -q 'Dependencies installed'; then
+            echo '✅ Dependencies installed'
+            break
+          fi
+          sleep 5
+        done
   
   # Step 4: Copy HSS module to instance
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
