fix: Update HSS API to use HTTPS (136.112.111.167:443) - Add nginx HTTPS proxy setup scripts

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -321,7 +321,7 @@ env:
       - RUNTIME
   
   - variable: VITE_HSS_API_URL
-    value: "http://136.112.111.167:3000"
+    value: "https://136.112.111.167"
     availability:
       - BUILD
       - RUNTIME
