--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -321,7 +321,7 @@ env:
       - RUNTIME
   
   - variable: VITE_HSS_API_URL
-    value: "https://hss.4gengineer.com"
+    value: "https://us-central1-lte-pci-mapper-65450042-bbf71.cloudfunctions.net/hssProxy"
     availability:
       - BUILD
       - RUNTIME
