docs: Add Cloud Build auto-deploy setup instructions

--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -1,44 +1,2 @@
-name: Deploy Cloud Functions
-
-on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'functions/**'
-      - '.github/workflows/deploy-functions.yml'
-
-jobs:
-  deploy-functions:
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      - name: Install dependencies
-        working-directory: ./functions
-        run: npm ci
-
-      - name: Build Functions
-        working-directory: ./functions
-        run: npm run build
-
-      - name: Install Firebase CLI
-        run: npm install -g firebase-tools
-
-      - name: Deploy Cloud Functions
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        run: |
-          echo "☁️  Deploying Cloud Functions..."
-          firebase deploy --only functions --project lte-pci-mapper-65450042-bbf71 --token "$FIREBASE_TOKEN"
-
-      - name: Deployment Success
-        run: |
-          echo "✅ Cloud Functions deployed successfully!"
+# This file doesn't actually work with Firebase - just documenting the issue
+# Firebase Cloud Build needs to be manually configured in GCP Console
