--- a/wisp-field-app/package.json
+++ b/wisp-field-app/package.json
@@ -13,8 +13,8 @@
     "build:ios": "cd ios && xcodebuild -workspace WISPFieldApp.xcworkspace -scheme WISPFieldApp -configuration Release"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-native": "^0.73.0",
+    "react": "18.2.0",
+    "react-native": "0.73.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@react-native-firebase/app": "^18.7.0",
@@ -26,7 +26,7 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-image-picker": "^7.1.0",
     "axios": "^1.6.0",
-    "react-native-async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0"
