--- a/wisp-field-app/package.json
+++ b/wisp-field-app/package.json
@@ -15,22 +15,23 @@
   "dependencies": {
     "react": "18.3.1",
     "react-native": "0.76.5",
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/stack": "^7.2.2",
-    "@react-native-firebase/app": "^21.5.0",
-    "@react-native-firebase/auth": "^21.5.0",
-    "@react-native-firebase/firestore": "^21.5.0",
-    "react-native-vision-camera": "^4.7.2",
-    "vision-camera-code-scanner": "^0.2.0",
-    "react-native-maps": "^1.18.0",
-    "@react-native-community/geolocation": "^3.4.0",
-    "react-native-image-picker": "^7.1.2",
-    "axios": "^1.7.9",
-    "@react-native-async-storage/async-storage": "^2.1.0",
-    "react-native-vector-icons": "^10.2.0",
-    "react-native-safe-area-context": "^4.15.0",
-    "react-native-screens": "^4.3.0",
-    "react-native-permissions": "^5.0.0"
+    "@react-navigation/native": "7.0.14",
+    "@react-navigation/stack": "7.4.10",
+    "@react-native-firebase/app": "21.5.0",
+    "@react-native-firebase/auth": "21.5.0",
+    "@react-native-firebase/firestore": "21.5.0",
+    "react-native-vision-camera": "4.7.2",
+    "vision-camera-code-scanner": "0.2.0",
+    "react-native-maps": "1.18.0",
+    "@react-native-community/geolocation": "3.4.0",
+    "react-native-image-picker": "7.1.2",
+    "axios": "1.7.9",
+    "@react-native-async-storage/async-storage": "2.1.0",
+    "react-native-vector-icons": "10.2.0",
+    "react-native-safe-area-context": "4.15.0",
+    "react-native-screens": "4.3.0",
+    "react-native-permissions": "5.0.0",
+    "react-native-gesture-handler": "2.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
