--- a/wisp-field-app/package.json
+++ b/wisp-field-app/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "react": "18.3.1",
     "react-native": "0.76.5",
-    "@react-navigation/native": "7.0.14",
+    "@react-navigation/native": "7.1.18",
     "@react-navigation/stack": "7.4.10",
+    "react-native-gesture-handler": "2.22.0",
+    "react-native-reanimated": "3.17.0",
     "@react-native-firebase/app": "21.5.0",
     "@react-native-firebase/auth": "21.5.0",
     "@react-native-firebase/firestore": "21.5.0",
@@ -30,8 +32,7 @@
     "react-native-vector-icons": "10.2.0",
     "react-native-safe-area-context": "4.15.0",
     "react-native-screens": "4.3.0",
-    "react-native-permissions": "5.0.0",
-    "react-native-gesture-handler": "2.22.0"
+    "react-native-permissions": "5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
