--- a/wisp-field-app/package.json
+++ b/wisp-field-app/package.json
@@ -13,39 +13,39 @@
     "build:ios": "cd ios && xcodebuild -workspace WISPFieldApp.xcworkspace -scheme WISPFieldApp -configuration Release"
   },
   "dependencies": {
-    "react": "18.3.1",
-    "react-native": "0.76.5",
-    "@react-navigation/native": "7.1.18",
-    "@react-navigation/stack": "7.4.10",
-    "react-native-gesture-handler": "2.22.0",
-    "react-native-reanimated": "3.17.0",
-    "@react-native-firebase/app": "21.5.0",
-    "@react-native-firebase/auth": "21.5.0",
-    "@react-native-firebase/firestore": "21.5.0",
-    "react-native-vision-camera": "4.7.2",
+    "react": "18.2.0",
+    "react-native": "0.73.11",
+    "@react-navigation/native": "6.1.18",
+    "@react-navigation/stack": "6.4.1",
+    "react-native-gesture-handler": "2.14.0",
+    "react-native-reanimated": "3.6.1",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "3.29.0",
+    "@react-native-firebase/app": "19.3.0",
+    "@react-native-firebase/auth": "19.3.0",
+    "@react-native-firebase/firestore": "19.3.0",
+    "react-native-vision-camera": "3.9.0",
     "vision-camera-code-scanner": "0.2.0",
-    "react-native-maps": "1.18.0",
-    "@react-native-community/geolocation": "3.4.0",
-    "react-native-image-picker": "7.1.2",
-    "axios": "1.7.9",
-    "@react-native-async-storage/async-storage": "2.1.0",
-    "react-native-vector-icons": "10.2.0",
-    "react-native-safe-area-context": "4.15.0",
-    "react-native-screens": "4.3.0",
-    "react-native-permissions": "5.0.0"
+    "react-native-maps": "1.10.0",
+    "@react-native-community/geolocation": "3.2.1",
+    "react-native-image-picker": "7.1.0",
+    "axios": "1.6.5",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "react-native-vector-icons": "10.0.3",
+    "react-native-permissions": "4.1.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/runtime": "^7.26.0",
-    "@react-native/babel-preset": "^0.76.0",
-    "@react-native/eslint-config": "^0.76.0",
-    "@react-native/metro-config": "^0.76.0",
-    "@react-native/typescript-config": "^0.76.0",
-    "@types/react": "^18.3.1",
-    "typescript": "^5.7.2",
-    "jest": "^29.7.0",
-    "@testing-library/react-native": "^12.9.0"
+    "@babel/core": "7.23.9",
+    "@babel/preset-env": "7.23.9",
+    "@babel/runtime": "7.23.9",
+    "@react-native/babel-preset": "0.73.21",
+    "@react-native/eslint-config": "0.73.2",
+    "@react-native/metro-config": "0.73.5",
+    "@react-native/typescript-config": "0.73.1",
+    "@types/react": "18.2.48",
+    "typescript": "5.3.3",
+    "jest": "29.7.0",
+    "@testing-library/react-native": "12.4.3"
   },
   "engines": {
     "node": ">=18"
