--- a/wisp-field-app/package.json
+++ b/wisp-field-app/package.json
@@ -1,32 +1,30 @@
 {
   "name": "wisp-field-app",
   "version": "1.0.0",
-  "description": "WISP Field Technician Mobile App - QR Scanner & Equipment Tracking",
+  "description": "WISP Field Technician Mobile App",
   "main": "index.js",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint .",
-    "build:android": "cd android && ./gradlew assembleRelease",
-    "build:ios": "cd ios && xcodebuild -workspace WISPFieldApp.xcworkspace -scheme WISPFieldApp -configuration Release"
+    "lint": "eslint ."
   },
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.73.11",
     "@react-navigation/native": "6.1.18",
     "@react-navigation/stack": "6.4.1",
-    "react-native-gesture-handler": "2.14.0",
-    "react-native-reanimated": "3.6.1",
+    "react-native-gesture-handler": "2.14.1",
+    "react-native-reanimated": "3.6.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "3.29.0",
     "@react-native-firebase/app": "19.3.0",
     "@react-native-firebase/auth": "19.3.0",
     "@react-native-firebase/firestore": "19.3.0",
-    "react-native-vision-camera": "3.9.0",
+    "react-native-vision-camera": "3.9.2",
     "vision-camera-code-scanner": "0.2.0",
-    "react-native-maps": "1.10.0",
+    "react-native-maps": "1.10.3",
     "@react-native-community/geolocation": "3.2.1",
     "react-native-image-picker": "7.1.0",
     "axios": "1.6.5",
@@ -44,11 +42,9 @@
     "@react-native/typescript-config": "0.73.1",
     "@types/react": "18.2.48",
     "typescript": "5.3.3",
-    "jest": "29.7.0",
-    "@testing-library/react-native": "12.4.3"
+    "jest": "29.7.0"
   },
   "engines": {
     "node": ">=18"
   }
 }
-
