Update Gradle and Kotlin versions for Android Studio compatibility

--- a/wisp-field-app/android/gradle.properties
+++ b/wisp-field-app/android/gradle.properties
@@ -44,3 +44,14 @@ newArchEnabled=false
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
 
+# Java toolchain version
+org.gradle.java.home=C:\\Program Files\\Microsoft\\jdk-17.0.13.11-hotspot
+
+# Allow implicit task dependencies (needed for React Native Firebase)
+org.gradle.configuration-cache.problems=warn
+
+# Disable strict validation for third-party deprecated features
+org.gradle.warning.mode=none
+systemProp.org.gradle.internal.http.connectionTimeout=60000
+systemProp.org.gradle.internal.http.socketTimeout=60000
+
