--- a/wisp-field-app/package.json
+++ b/wisp-field-app/package.json
@@ -11,26 +11,26 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.73.11",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/geolocation": "3.2.1",
+    "@react-native-firebase/app": "^18.9.0",
+    "@react-native-firebase/auth": "^18.9.0",
+    "@react-native-firebase/firestore": "^18.9.0",
     "@react-navigation/native": "6.1.18",
     "@react-navigation/stack": "6.4.1",
+    "axios": "1.6.5",
+    "react": "18.2.0",
+    "react-native": "0.73.11",
     "react-native-gesture-handler": "2.14.1",
+    "react-native-image-picker": "7.1.0",
+    "react-native-maps": "1.10.3",
+    "react-native-permissions": "4.1.5",
     "react-native-reanimated": "3.6.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "3.29.0",
-    "@react-native-firebase/app": "19.3.0",
-    "@react-native-firebase/auth": "19.3.0",
-    "@react-native-firebase/firestore": "19.3.0",
-    "react-native-vision-camera": "3.9.2",
-    "vision-camera-code-scanner": "0.2.0",
-    "react-native-maps": "1.10.3",
-    "@react-native-community/geolocation": "3.2.1",
-    "react-native-image-picker": "7.1.0",
-    "axios": "1.6.5",
-    "@react-native-async-storage/async-storage": "1.23.1",
     "react-native-vector-icons": "10.0.3",
-    "react-native-permissions": "4.1.5"
+    "react-native-vision-camera": "3.9.2",
+    "vision-camera-code-scanner": "0.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.23.9",
@@ -41,8 +41,8 @@
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
     "@types/react": "18.2.48",
-    "typescript": "5.3.3",
-    "jest": "29.7.0"
+    "jest": "29.7.0",
+    "typescript": "5.3.3"
   },
   "engines": {
     "node": ">=18"
