--- a/wisp-field-app/package.json
+++ b/wisp-field-app/package.json
@@ -8,7 +8,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "postinstall": "node scripts/postinstall.js"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
