--- a/wisp-field-app/android/settings.gradle
+++ b/wisp-field-app/android/settings.gradle
@@ -3,13 +3,6 @@ apply from: file("../node_modules/@react-native-community/cli-platform-android/n
 include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
 
-// React Native Firebase
-include ':@react-native-firebase_app'
-project(':@react-native-firebase_app').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-firebase/app/android')
-
-include ':@react-native-firebase_auth'
-project(':@react-native-firebase_auth').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-firebase/auth/android')
-
-include ':@react-native-firebase_firestore'
-project(':@react-native-firebase_firestore').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-firebase/firestore/android')
+// React Native Firebase modules are auto-included by applyNativeModulesSettingsGradle above
+// DO NOT manually include them here or you'll get duplicate module errors
 
