--- a/wisp-field-app/package.json
+++ b/wisp-field-app/package.json
@@ -22,6 +22,7 @@
     "axios": "1.6.5",
     "react": "18.2.0",
     "react-native": "0.73.11",
+    "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "2.14.1",
     "react-native-image-picker": "7.1.0",
     "react-native-maps": "1.10.3",
@@ -30,8 +31,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "3.29.0",
     "react-native-vector-icons": "10.0.3",
-    "react-native-vision-camera": "3.9.2",
-    "vision-camera-code-scanner": "0.2.0"
+    "react-native-vision-camera": "3.9.2"
   },
   "devDependencies": {
     "@babel/core": "7.23.9",
