--- a/wisp-field-app/android/build.gradle
+++ b/wisp-field-app/android/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         targetSdkVersion = 34
         ndkVersion = "25.1.8937393"
         kotlinVersion = "1.9.22"
+        kotlin_version = "1.9.22"  // For react-native-camera-kit
     }
     repositories {
         google()
