--- a/wisp-field-app/android/gradle.properties
+++ b/wisp-field-app/android/gradle.properties
@@ -52,6 +52,7 @@ org.gradle.configuration-cache.problems=warn
 
 # Disable strict validation for third-party deprecated features
 org.gradle.warning.mode=none
+android.suppressUnsupportedCompileSdk=33,34
 systemProp.org.gradle.internal.http.connectionTimeout=60000
 systemProp.org.gradle.internal.http.socketTimeout=60000
 
