--- a/wisp-field-app/android/app/build.gradle
+++ b/wisp-field-app/android/app/build.gradle
@@ -54,6 +54,14 @@ android {
     }
 }
 
+// Suppress AAR metadata check errors for third-party libraries
+configurations.all {
+    resolutionStrategy {
+        force 'androidx.core:core:1.12.0'
+        force 'androidx.appcompat:appcompat:1.6.1'
+    }
+}
+
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
@@ -83,4 +91,3 @@ dependencies {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
-
