--- a/wisp-field-app/android/gradle.properties
+++ b/wisp-field-app/android/gradle.properties
@@ -52,7 +52,9 @@ org.gradle.configuration-cache.problems=warn
 
 # Disable strict validation for third-party deprecated features
 org.gradle.warning.mode=none
-android.suppressUnsupportedCompileSdk=33,34
+android.suppressUnsupportedCompileSdk=31,32,33,34
+android.disableAutomaticComponentCreation=true
+android.suppressUnsupportedOptionWarnings=true
 systemProp.org.gradle.internal.http.connectionTimeout=60000
 systemProp.org.gradle.internal.http.socketTimeout=60000
 
